# Flippy

./: .gitignore  main.py  pyproject.toml
src/: app.py  config.py
src/agents/: knowledge_agent.py
src/indexing/: index_docs.py  index_fuzzfiles.py  index_workflow_catalog.py  test_retrieval.py
src/tools/: fuzzball_account_tools.py  fuzzball_auth.py  fuzzball_org_tools.py  fuzzball_user_tools.py  fuzzball_workflow_tools.py  get_user_info.py  list_workflow_catalog.py  search_fuzzball_docs.py  search_simple_fuzzfiles.py  search_workflow_catalog.py
